# Trading-Engine

./: .gitignore  1.txt  CMakeLists.txt  Makefile  README.md  engine  main.cpp  output.txt  requirements.txt  stock_data.db
Stock-Market/: stock_data.cpp  stock_data.h  stock_market.cpp  stock_market.h
Trader/: portfolio.cpp  portfolio.h  trader.cpp  trader.h
Trader/TradingStrats/: breakout.cpp  breakout.h  mean_reversion.cpp  mean_reversion.h  moving_avg.cpp  moving_avg.h
Trading-Engine/: engine.cpp
config/: cpp_requirements.txt  python_requirements.txt
python/: get_stock_data.py
scripts/: build.sh  setup.sh
src/: main.cpp
src/core/: engine.cpp  engine.h
src/market/: stock_data.cpp  stock_data.h  stock_market.cpp  stock_market.h
src/python/: get_stock_data.py
src/trader/: portfolio.cpp  portfolio.h  trader.cpp  trader.h
src/trader/strategies/: mean_reversion.cpp  mean_reversion.h  moving_avg.cpp  moving_avg.h
